# Telemetrix4RpiPico

./: .gitignore  CMakeLists.txt  README.md  Telemetrix4RpiPico.c  Telemetrix4RpiPico.pio
archive/: dht.c
include/: Telemetrix4RpiPico.h
